Copy spec/config.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ rvm:
   - 2.5.1
 before_script:
   - ./bin/rails db:migrate RAILS_ENV=test
+  - cp spec/config.yml{.sample,}
 script: bundle exec rspec
