--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ rvm:
   - 2.5.1
 services:
   - redis-server
+before_install:
+  - sudo add-apt-repository -y ppa:chris-lea/libsodium
+  - sudo apt-get -y update
+  - sudo apt-get install -y libsodium-dev
 before_script:
   - ./bin/rails db:migrate RAILS_ENV=test
   - cp spec/config.yml{.sample,}
