--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/setup-ruby@v1
         with:
           ruby-version: 2.6.3
-      - name: Build and test with Rake
+      - name: Build and test with RSpec
         run: |
           gem install bundler
           bundle install --jobs 4 --retry 3
