ci: use non-deprecated ruby setup action

--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -13,10 +13,10 @@ jobs:
       - name: Setup System
         run: |
           sudo apt-get install libsqlite3-dev
-      - name: Set up Ruby 2.7
-        uses: actions/setup-ruby@v1
+      - uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.7.3
+          bundler-cache: true
       - name: Bundler
         run: |
           gem install bundler
