fix: no implicit conversion of Hash into String
MessageBusClientWorker 2.1.1+ changes the method signature of
`MessageBusClientWorker::SubscriptionWorker`, which this gem uses
directly, to be compatible with Sidekiq 6 `strict_args` (enforced in
Sidekiq 7; no Ruby hashes can be passed to jobs).

This means that this gem is more compatible with Sidekiq 7
as long as MessageBusClientWorker 2.1.1+ is used

--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -20,8 +20,9 @@ jobs:
         run: |
           gem install bundler
           bundle install --jobs 4 --retry 3
+          bundle exec appraisal install
       - name: RSpec
         run: |
           bundle exec rails db:schema:load RAILS_ENV=test
           cp spec/config.yml{.sample,}
-          bundle exec rspec spec
+          bundle exec appraisal rspec spec
